# Tag_Comparison

./: .gitignore  CMakeLists.txt  Comparison.cpp  Comparison.h  Plots.py  README.md  calibrate_camera_charuco.cpp  gcode.cpp  gcode.h
Aruco/: detect.cpp
RUNEtag/: detect.cpp
RUNEtag/RUNETag/: CMakeLists.txt  auxrenderer.cpp  ellipsedetector.cpp  ellipserefine.cpp  markerpose.cpp
RUNEtag/RUNETag/RUNEtagdetect/: CMakeLists.txt  RUNEtagdetect.cpp  live.cpp  test_occlusion.cpp
RUNEtag/RUNETag/WinNTL/: CMakeLists.txt  Makefile  cmake_install.cmake
RUNEtag/RUNETag/WinNTL/src/: tools.cpp
RUNEtag/RUNETag/include/: digitalmarkermodel.hpp
RUNEtag/RUNETagGenerator/: RUNETagGenerator.sln
RUNEtag/RUNETagGenerator/RUNETagGenerator/: CMakeLists.txt  MarkPointSet.h  RUNETagGenerator.vcproj  runetaggenerator.cpp
apriltag/: detect.cpp
apriltag/example/: opencv_demo.cc
include/: Comparison.h  aruco_samples_utility.hpp  detect.h
serial/: CMakeLists.txt
stag/: detect.cpp  main.cpp
stag/src/: Drawer.cpp  Drawer.h  Stag.cpp  Stag.h  colors.h
